object read/write

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
 clap = { version = "4.5.38", features = ["derive"] }
 flate2 = { version = "1.1.1", features = ["zlib"] }
+hex = "0.4.3"
 sha1 = "0.10.6"
+thiserror = "2.0.12"
