--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ anyhow = "1.0.98"
 clap = { version = "4.5.38", features = ["derive"] }
 flate2 = { version = "1.1.1", features = ["zlib"] }
 hex = "0.4.3"
+indexmap = "2.10.0"
 sha1 = "0.10.6"
 thiserror = "2.0.12"
