--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.98"
 clap = { version = "4.5.38", features = ["derive"] }
 env_logger = "0.11.8"
 flate2 = { version = "1.1.1", features = ["zlib"] }
+glob = "0.3.2"
 hex = "0.4.3"
 indexmap = "2.10.0"
 log = "0.4.27"
